# mcp-windows-automation

./: .gitignore  README.md  config.yaml  pyproject.toml
src/mcp_desktop_bridge/: __init__.py  automation.py  clipboard.py  server.py
